	* fix create_torrent python binding
	* update symlinks to conform to BEP 47
	* fix python bindings for peer_info
	* support creating symlinks, for torrents with symlinks in them
	* fix error in seed_mode flag
	* support magnet link parameters with number siffixes
	* consistently use "lt" namespace in examples and documentation
	* fix Mingw build to use native cryptoAPI

1.2 release

	* requires boost >= 1.58 to build
	* tweak heuristic of how to interpret url seeds in multi-file torrents
	* support &ipv4= tracker argument for private torrents
	* renamed debug_notification to connect_notification
	* when updating listen sockets, only post alerts for new ones
	* deprecate anonymous_mode_alert
	* deprecated force_proxy setting (when set, the proxy is always used)
	* add support for Port Control Protocol (PCP)
	* deliver notification of alerts being dropped via alerts_dropped_alert
	* deprecated alert::progress_notification alert category, split into
	  finer grained categories
	* update plugin interface functions for improved type-safety
	* implemented support magnet URI extension, select specific file indices
	  for download, BEP53
	* make tracker keys multi-homed. remove set_key() function on session.
	* add flags()/set_flags()/unset_flags() to torrent_handle, deprecate individual functions
	* added alert for block being sent to the send buffer
	* drop support for windows compilers without std::wstring
	* implemented support for DHT infohash indexing, BEP51
	* removed deprecated support for file_base in file_storage
	* added support for running separate DHT nodes on each network interface
	* added support for establishing UTP connections on any network interface
	* added support for sending tracker announces on every network interface
	* introduce "lt" namespace alias
	* need_save_resume_data() will no longer return true every 15 minutes
	* make the file_status interface explicitly public types
	* added resolver_cache_timeout setting for internal host name resolver