@@ -1,3 +1,4 @@
+	* pick contiguous pieces from peers with high download rate
 	* fix create_torrent python binding
 	* update symlinks to conform to BEP 47
 	* fix python bindings for peer_info
